--- a/overlay/packages/apps/Settings/res/values/bools.xml
+++ b/overlay/packages/apps/Settings/res/values/bools.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
-     Copyright (C) 2012 The CyanogenMod Project
+     Copyright (C) 2009 The Android Open Source Project
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -15,8 +15,6 @@
      limitations under the License.
 -->
 
-<resources xmlns:xliff="urnasis:names:tc:xliff:document:1.2 ">
-    <!-- Show Expanded Desktop preference -->
-    <bool name="config_show_expandedDesktop">true</bool>
-    <bool name="config_show_volumeRockerWake">true</bool>
+<resources>
+	<bool name="has_advanced_settings">true</bool>
 </resources>
